--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,23 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="purple">#7E18EB</color>
+    <color name="blue">#1A0D53</color>
+    <color name="red">#E91E63</color>
+    <color name="green">#26BB08</color>
+    <color name="text_primary">#0C0F14</color>
+    <color name="text_secondary">#7A7C7F</color>
+    <color name="gray">#929292</color>
+    <color name="bottom_navigation_dark">#0A0916</color>
+    <color name="bottom_navigation_light">#FFFFFF</color>
+    <color name="purple_500">#6200EE</color>
+    <color name="purple_200">#BB86FC</color> <!-- Ripple lighter shade -->
+    <color name="primary">#1C2E46</color>
+    <color name="primary_dark">#142232</color>
+    <color name="primary_text">#212121</color>
+    <color name="secondary_text">#757575</color>
+    <color name="input_backgroud">#ECECEC</color>
+    <color name="icon_background">#20FFFFFF</color>
+    <color name="error">#B00020</color>
+    <color name="received_message_background">#090D16</color>
 </resources>
